--- a/VAICOM/Properties/Resources.resx
+++ b/VAICOM/Properties/Resources.resx
@@ -217,8 +217,8 @@
   <data name="Sidetitle_Reset" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\sidetitle-reset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="VAICOM_PRO_for_DCS_World" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Files\VAICOM PRO for DCS World.vap;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="VAICOM_for_DCS_World" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Files\VAICOM for DCS World.vap;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="EULA" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\files\eula.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
@@ -523,9 +523,6 @@
   <data name="Orig_F14_JesterInit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\files\orig.f14.jesterinit.lua;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="VAICOMPRO" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\files\vaicompro.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="Append_Kneeboard_device_init" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\files\append.kneeboard.device_init.lua;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
@@ -603,5 +600,8 @@
   </data>
   <data name="Orig_Terrain_Kola_radio" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Files\Orig.Terrain.Kola.radio.lua;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="VAICOM" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Files\VAICOM.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
