--- a/VAICOM/Properties/Resources.resx
+++ b/VAICOM/Properties/Resources.resx
@@ -604,4 +604,7 @@
   <data name="Append_Core_Export" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Files\Append.Core.Export.lua;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="LegacyExportmatch" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Files\LegacyExportmatch.lua;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
